--- a/menu.html
+++ b/menu.html
@@ -621,7 +621,7 @@ setInterval(function() {
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-6">
+      <div class="col-xs-12 col-sm-12">
         <div class="menu-section">
           <h2 class="menu-section-title">Saus</h2>
           <hr>
@@ -726,7 +726,7 @@ setInterval(function() {
         </div>
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-xs-12 col-sm-12">
               <div class="menu-section">
                 <h2 class="menu-section-title">Menu's</h2>
                 <hr>
@@ -788,7 +788,7 @@ setInterval(function() {
             
             </script>
                   <div id="restaurant-menu" >
-                    <div class="section-title text-center center"style="background-image: url(./img/friet.png);" id="menus">
+                    <div class="section-title text-center center"style="background-image: url(./img/ajampangang.jpg);" id="menus">
                       <div class="overlay">
                         <h2>Chinees menu</h2>
                         <hr>
@@ -797,7 +797,7 @@ setInterval(function() {
                     </div>
                     <div class="container">
                       <div class="row">
-                        <div class="col-xs-12 col-sm-6">
+                        <div class="col-xs-12 col-sm-12">
                           <div class="menu-section">
                             <h2 class="menu-section-title">Chinees menu</h2>
                             <hr>
@@ -826,14 +826,12 @@ setInterval(function() {
                                   <div class="menu-item-price"> €10,00* </div>
                                   <div class="menu-item-name"> Kip ketjap</div>
                                   <div class="menu-item-price"> €10,00* </div>
-                                </div>
-                                <div class="menu-item">
                                   <div class="menu-item-name"> Kip pikant</div>
                                   <div class="menu-item-price"> €10,00* </div>
-                                  <div class="menu-item-name"> Nasi bakje</div>
-                                  <div class="menu-item-price"> €4,50* </div>
                                 </div>
                                 <div class="menu-item">
+                                  <div class="menu-item-name"> Nasi bakje</div>
+                                  <div class="menu-item-price"> €4,50* </div>
                                   <div class="menu-item-name"> Nasi goreng</div>
                                   <div class="menu-item-price"> €9,50* </div>
                                 </div>
@@ -852,7 +850,7 @@ setInterval(function() {
                         <script>
                           let chinees = document.getElementById("chinees")
                         setInterval(function() {
-                          var burgers = ["./img/friet.png", "./img/shoarma.jpg"]
+                          var burgers = ["./img/ajampangang.jpg", "./img/babipangang.jpg"]
                           const random = burgers[Math.floor(Math.random() * burgers.length)];
                           chinees.style.backgroundImage = `url(${random}`
                         }, 5000);
