--- a/menu.html
+++ b/menu.html
@@ -788,7 +788,7 @@ setInterval(function() {
             
             </script>
                   <div id="restaurant-menu" >
-                    <div class="section-title text-center center"style="background-image: url(./img/ajampangang.jpg);" id="menus">
+                    <div class="section-title text-center center"style="background-image: url(./img/ajampangang.jpg);" id="chinees">
                       <div class="overlay">
                         <h2>Chinees menu</h2>
                         <hr>
