--- a/menu.html
+++ b/menu.html
@@ -1031,7 +1031,7 @@ setInterval(function() {
       <script>
         let drinken = document.getElementById("drinken")
       setInterval(function() {
-        var burgers = ["./img/cola.png", "./img/IJsthee.jpg", "./img/sinas,jpg", "./img/dommelsch.jpg", "./img/jupiler.jpg"]
+        var burgers = ["./img/cola.png", "./img/IJsthee.jpg", "./img/sinas.jpg", "./img/dommelsch.jpg", "./img/jupiler.jpg"]
         const random = burgers[Math.floor(Math.random() * burgers.length)];
         drinken.style.backgroundImage = `url(${random}`
       }, 5000);
