--- a/menu.html
+++ b/menu.html
@@ -50,9 +50,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="./index.html" class="page-scroll">Over Ons</a></li>
+        <li><a href="./index.html" class="page-scroll">Home</a></li>
         <li><a href="#restaurant-menu" class="page-scroll">Menu</a></li>
-        <li><a href="#footer" class="page-scroll">Contact</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
