--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -74,6 +74,9 @@
   </div>
 </header>
 <!-- About Section -->
+<button id="myBtn" title="Go to top"><a href="#page-top" class="page-scroll" style="color: white"><span class="material-symbols-outlined">
+  arrow_upward
+  </span></a></button>
 <div id="about">
   <div class="container">
     <div class="row">
@@ -283,5 +286,6 @@
 <script type="text/javascript" src="js/jqBootstrapValidation.js"></script> 
 <script type="text/javascript" src="js/contact_me.js"></script> 
 <script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/BackToTop.js"></script>
 </body>
 </html>
