--- a/index.html
+++ b/index.html
@@ -287,5 +287,10 @@
 <script type="text/javascript" src="js/contact_me.js"></script> 
 <script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="js/BackToTop.js"></script>
+<script type="text/javascript">
+  if (window.top !== window.self) {
+     window.top.location = window.self.location;
+  }
+</script>
 </body>
 </html>
