--- a/menu.html
+++ b/menu.html
@@ -1539,5 +1539,10 @@
 <script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="js/BackToTop.js"></script>
 <script type="text/javascript" src="js/SlideShow.js"></script>
+<script type="text/javascript">
+  if (window.top !== window.self) {
+     window.top.location = window.self.location;
+  }
+</script>
 </body>
 </html>
