updated the menu

--- a/menu.html
+++ b/menu.html
@@ -591,8 +591,6 @@
             <div class="menu-item-price"> €2,90* </div>
           </div>
           <div class="menu-item">
-            <div class="menu-item-name"> Broodje tartaar</div>
-            <div class="menu-item-price"> €2,50* </div>
             <div class="menu-item-name"> Broodje viandel</div>
             <div class="menu-item-price"> €3,10* </div>
           </div>
@@ -831,20 +829,25 @@
                                   <div class="menu-item-name"> Foe yong hai</div>
                                   <div class="menu-item-price"> €10,00* </div>
                                   <div class="menu-item-description">Omelet met groente en vlees</div>
-                                  <div class="menu-item-name">  Kip chili</div>
-                                  <div class="menu-item-price"> €10,00* </div>
                                 </div>
                                 <div class="menu-item">
                                   <div class="menu-item-name"> Kip kerrie</div>
                                   <div class="menu-item-price"> €10,00* </div>
+                                  <div class="menu-item-description">Kip, paprika, ui en kerrie saus</div>
                                   <div class="menu-item-name"> Kip ketjap</div>
                                   <div class="menu-item-price"> €10,00* </div>
+                                  <div class="menu-item-description">Kip, paprika, ui en ketjap saus</div>
                                   <div class="menu-item-name"> Kip pikant</div>
                                   <div class="menu-item-price"> €10,00* </div>
+                                  <div class="menu-item-description">Kip, paprika, ui en hete pikante saus</div>
+                                  <div class="menu-item-name"> Kip chili</div>
+                                  <div class="menu-item-price"> €10,00* </div>
+                                  <div class="menu-item-description">Kip, paprika, ui en chili saus</div>
                                 </div>
                                 <div class="menu-item">
                                   <div class="menu-item-name"> Nasi bakje</div>
                                   <div class="menu-item-price"> €4,50* </div>
+                                  <div class="menu-item-description">Los</div>
                                   <div class="menu-item-name"> Nasi goreng</div>
                                   <div class="menu-item-price"> €9,50* </div>
                                   <div class="menu-item-description">Gebakken ei met 3 stokjes saté</div>
@@ -944,16 +947,6 @@
               <div class="menu-item">
                 <div class="menu-item-name"> Friste</div>
                 <div class="menu-item-price"> €2,20* </div>
-              </div>
-              <div class="menu-item">
-                <div class="menu-item-name"> Fuzetea green blik</div>
-                <div class="menu-item-price"> €1,70* </div>
-                <div class="menu-item-name"> Fuzetea mango blik</div>
-                <div class="menu-item-price"> €1,70* </div>
-                <div class="menu-item-name"> Fuzetea peach blik</div>
-                <div class="menu-item-price"> €1,70* </div>
-                <div class="menu-item-name"> Fuzetea sparkling blik</div>
-                <div class="menu-item-price"> €1,70* </div>
               </div>
               <div class="menu-item">
                 <div class="menu-item-name"> Fuzetea green flesje</div>
